kubebernete/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: level-home-kubernetes
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    name: level-home-kubernetes
